<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ForgetPassword">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/image_background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"/>


    <LinearLayout
        android:id="@+id/logoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/logoIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logoo"
            android:contentDescription="@string/app_name"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/welcomeTextBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logoLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:paddingStart="35dp">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:fontFamily="@font/segoebold"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/colorWhite"
            android:includeFontPadding="false"/>

    </LinearLayout>

    <TextView
        android:id="@+id/enterEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextBackground"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/enter_email_background"
        android:fontFamily="@font/segoe"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:autofillHints="false"
        android:textColor="@color/colorWhite"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterEmailText"
        tools:ignore="LabelFor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendEmailBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorWhite"
        app:cornerRadius="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"
        android:layout_marginTop="30dp"
        android:hint="@string/send_email"
        android:textColorHint="@color/colorAccent"
        android:fontFamily="@font/segoe"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/goToLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        app:cornerRadius="10dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/sendEmailBtn"
        android:layout_marginTop="20dp"
        android:hint="Go to Login"
        android:textColorHint="@color/colorWhite"
        android:fontFamily="@font/segoe"/>

</androidx.constraintlayout.widget.ConstraintLayout>