<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:orientation="horizontal">


    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@color/colorWhite"
        tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/user_one_picture"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/user_one"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/online"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:src="@drawable/online_status"
            app:layout_constraintBottom_toBottomOf="@id/user_one_picture"
            app:layout_constraintEnd_toEndOf="@id/user_one_picture"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/userNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="14dp">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoebe"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/textChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hey"
            android:textSize="14sp"
            android:gravity="center_vertical"/>

    </LinearLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/time_messageNo_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2:30PM"
                android:textSize="11sp"
                android:fontFamily="@font/segoe"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="10dp"
                android:textColor="@color/colorPrimary" />

            <FrameLayout
                android:id="@+id/numberOfMessagesLayout"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/round_blue_background"
                app:layout_constraintTop_toBottomOf="@id/time"
                app:layout_constraintStart_toStartOf="@id/time"
                app:layout_constraintEnd_toEndOf="@id/time"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/numberOfMessages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:textStyle="bold"
                    android:textSize="9sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/segoe"
                    android:layout_gravity="center"/>

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/chatSupporter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/mainLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="70dp"
        android:background="@drawable/chat_supporter_icon"/>

</androidx.constraintlayout.widget.ConstraintLayout>
